changing ng-src and width

--- a/public/views/song/templates/song-party-mini.view.client.html
+++ b/public/views/song/templates/song-party-mini.view.client.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="hidden-xs col-sm-2 remove-padding-left">
-            <img ng-click="model.goToDetails(song)" ng-src="{{song.artUrl}}" width="100%">
+            <img ng-click="model.goToDetails(song)" ng-src="{{model.song.artUrl}}" width="50%">
         </div>
         <div ng-click="model.goToDetails(song)" class="col-xs-6">
             <h3 class="no-wrap">{{song.title}}</h4>
