--- a/public/views/home/templates/home.view.client.html
+++ b/public/views/home/templates/home.view.client.html
@@ -1,6 +1,6 @@
 <main-nav></main-nav>
 
-<div class="container-fluid">
+<div class="container-fluid" style="width: 600px">
     <div ng-if="model.couldNotFindParty" class="alert alert-warning">Could not find party with that ID. Try again</div>
     <h1 align="center">Welcome!</h1>
     <h2 align="center">Join a party by inputting a party ID below</h2>
